--- a/web/components/WiGO/PerGameStatsTable.module.scss
+++ b/web/components/WiGO/PerGameStatsTable.module.scss
@@ -36,7 +36,7 @@ table.verticalStatsTable {
   height: 100%;
   border-collapse: collapse;
   table-layout: fixed; // Helps with column widths
-  border-bottom: 8px solid lighten(v.$background-dark, 3%); // Optional: border for visual separation
+  border-bottom: 8px solid color.adjust(v.$background-dark, $lightness: 3%); // Optional: border for visual separation
 
   th,
   td {
@@ -78,7 +78,7 @@ table.verticalStatsTable {
     padding: v.$space-sm;
     font-size: v.$font-size-small * 0.9;
     letter-spacing: 0.25em;
-    background-color: darken(v.$background-dark, 5%);
+    background-color: color.adjust(v.$background-dark, $lightness: -5%);
     color: v.$text-primary-color;
     font-weight: 900;
     position: sticky; // Make header row sticky
@@ -105,11 +105,11 @@ table.verticalStatsTable {
   tbody tr {
     transition: background-color v.$transition-duration v.$transition-easing;
     &:nth-child(even) {
-      background-color: darken(v.$background-light, 1%);
+      background-color: color.adjust(v.$background-light, $lightness: -1%);
     }
 
     &:nth-child(odd) {
-      background-color: darken(v.$background-light, 3%);
+      background-color: color.adjust(v.$background-light, $lightness: -3%);
     }
     &:hover {
       background-color: color.scale(v.$primary-color, $alpha: -70%);
