npm run build success after scss updates

--- a/web/components/WiGO/NameSearchBar.module.scss
+++ b/web/components/WiGO/NameSearchBar.module.scss
@@ -1,5 +1,6 @@
 /* /web/components/WiGO/NameSearchBar.module.scss */
 @use "styles/vars" as v; // Import variables
+@use "sass:color";
 
 .searchBarContainer {
   position: relative;
